project('google-fuzztest', ['c', 'cpp'], meson_version: '>=0.60')

absl_base = dependency('absl_base')
absl_container = dependency('absl_container')
absl_debugging = dependency('absl_debugging')
absl_log = dependency('absl_log')
absl_flags = dependency('absl_flags')
absl_hash = dependency('absl_hash')
absl_crc = dependency('absl_crc')
absl_numeric = dependency('absl_numeric')
absl_profiling = dependency('absl_profiling')
absl_random = dependency('absl_random')
absl_status = dependency('absl_status')
absl_strings = dependency('absl_strings')
absl_synchronization = dependency('absl_synchronization')
absl_time = dependency('absl_time')
absl_types = dependency('absl_types')
absl_algorithm_container = dependency('absl_algorithm_container')
absl_any_invocable = dependency('absl_any_invocable')
absl_bad_any_cast_impl = dependency('absl_bad_any_cast_impl')
absl_bad_optional_access = dependency('absl_bad_optional_access')
absl_bad_variant_access = dependency('absl_bad_variant_access')
absl_bind_front = dependency('absl_bind_front')
absl_city = dependency('absl_city')
absl_civil_time = dependency('absl_civil_time')
absl_cleanup = dependency('absl_cleanup')
absl_cord = dependency('absl_cord')
absl_cord_internal = dependency('absl_cord_internal')
absl_cordz_functions = dependency('absl_cordz_functions')
absl_cordz_handle = dependency('absl_cordz_handle')
absl_cordz_info = dependency('absl_cordz_info')
absl_cordz_sample_token = dependency('absl_cordz_sample_token')
absl_core_headers = dependency('absl_core_headers')
absl_crc32c = dependency('absl_crc32c')
absl_debugging_internal = dependency('absl_debugging_internal')
absl_demangle_internal = dependency('absl_demangle_internal')
absl_die_if_null = dependency('absl_die_if_null')
absl_examine_stack = dependency('absl_examine_stack')
absl_exponential_biased = dependency('absl_exponential_biased')
absl_failure_signal_handler = dependency('absl_failure_signal_handler')
absl_flags_commandlineflag = dependency('absl_flags_commandlineflag')
absl_flags_commandlineflag_internal = dependency('absl_flags_commandlineflag_internal')
absl_flags_config = dependency('absl_flags_config')
absl_flags_internal = dependency('absl_flags_internal')
absl_flags_marshalling = dependency('absl_flags_marshalling')
absl_flags_parse = dependency('absl_flags_parse')
absl_flags_private_handle_accessor = dependency('absl_flags_private_handle_accessor')
absl_flags_program_name = dependency('absl_flags_program_name')
absl_flags_reflection = dependency('absl_flags_reflection')
absl_flags_usage = dependency('absl_flags_usage')
absl_flags_usage_internal = dependency('absl_flags_usage_internal')
absl_flat_hash_map = dependency('absl_flat_hash_map')
absl_flat_hash_set = dependency('absl_flat_hash_set')
absl_function_ref = dependency('absl_function_ref')
absl_graphcycles_internal = dependency('absl_graphcycles_internal')
absl_hashtablez_sampler = dependency('absl_hashtablez_sampler')
absl_inlined_vector = dependency('absl_inlined_vector')
absl_int128 = dependency('absl_int128')
absl_leak_check = dependency('absl_leak_check')
absl_log_initialize = dependency('absl_log_initialize')
absl_log_internal_check_op = dependency('absl_log_internal_check_op')
absl_log_internal_message = dependency('absl_log_internal_message')
absl_log_severity = dependency('absl_log_severity')
absl_low_level_hash = dependency('absl_low_level_hash')
absl_memory = dependency('absl_memory')
absl_optional = dependency('absl_optional')
absl_periodic_sampler = dependency('absl_periodic_sampler')
absl_random_bit_gen_ref = dependency('absl_random_bit_gen_ref')
absl_random_distributions = dependency('absl_random_distributions')
absl_random_internal_distribution_test_util = dependency('absl_random_internal_distribution_test_util')
absl_random_internal_platform = dependency('absl_random_internal_platform')
absl_random_internal_pool_urbg = dependency('absl_random_internal_pool_urbg')
absl_random_internal_randen = dependency('absl_random_internal_randen')
absl_random_internal_randen_hwaes = dependency('absl_random_internal_randen_hwaes')
absl_random_internal_randen_hwaes_impl = dependency('absl_random_internal_randen_hwaes_impl')
absl_random_internal_randen_slow = dependency('absl_random_internal_randen_slow')
absl_random_internal_seed_material = dependency('absl_random_internal_seed_material')
absl_random_random = dependency('absl_random_random')
absl_random_seed_gen_exception = dependency('absl_random_seed_gen_exception')
absl_random_seed_sequences = dependency('absl_random_seed_sequences')
absl_raw_hash_set = dependency('absl_raw_hash_set')
absl_raw_logging_internal = dependency('absl_raw_logging_internal')
absl_scoped_set_env = dependency('absl_scoped_set_env')
absl_span = dependency('absl_span')
absl_spinlock_wait = dependency('absl_spinlock_wait')
absl_stacktrace = dependency('absl_stacktrace')
absl_statusor = dependency('absl_statusor')
absl_str_format = dependency('absl_str_format')
absl_str_format_internal = dependency('absl_str_format_internal')
absl_strerror = dependency('absl_strerror')
absl_string_view = dependency('absl_string_view')
absl_strings_internal = dependency('absl_strings_internal')
absl_symbolize = dependency('absl_symbolize')
absl_throw_delegate = dependency('absl_throw_delegate')
absl_time_zone = dependency('absl_time_zone')
absl_type_traits = dependency('absl_type_traits')
absl_utility = dependency('absl_utility')
absl_variant = dependency('absl_variant')

re2 = dependency('re2')

antlr4_runtime = dependency('antlr4-runtime', method: 'cmake', modules: ['antlr4_static'])

subdir('grammar_codegen')
subdir('tools')
subdir('common')